[REFACTOR] Fix maintainability issues with SonarCube guidance